--- a/styles.css
+++ b/styles.css
@@ -31,8 +31,9 @@ section{
     background-color:black
 
 }
-.nav-links ul{
-    margin: 0px;
+.nav-links{
+    padding: 0px;
+    background-color: black;
 }
 .nav-links li{
     list-style-type: none;
@@ -58,18 +59,107 @@ section{
 .hero-text{
     vertical-align: center;
     text-align: center;
+    font-size: 40px;
     color: white;
-    padding-top: 100px;
+    padding-top: 70px;
 }
 
-/* Shows section */
-.pic{
-    align-items: center;
-    display: inline;
-    width: 60%;
+/* Middle Section */
+.main{
+    /* border: 2px solid red; */
+    padding: 10px 10px;
+    
+    
 }
-
-h3{
+        /* Date Box */
+.date{
     background-color: lightgray;
+    border: 2px solid darkgray;
     align-items: center;
+    text-align: left;
+    padding-left: 20px;
+    margin: 10px 170px;
+    
+}   
+
+        /* Show Cards */
+.show-cards{
+    display: flex;
+    justify-content: space-between;
+    margin: 10px 170px;
+}
+
+/* .card{
+    /* border: 2px solid red;
+} */
+
+/* .card-pic{
+    /* border: 2px solid red;
+} */
+
+.img-size{
+    height: 180px; 
+    width: 230px;
+    
+}
+
+/* .card-text{
+    /* border: 2px solid red;
+} */
+
+.card-text p{
+    margin: 0px;
+    text-align: left;
+}
+
+.card-title{
+    /* border: 2px solid red; */
+    text-align: left;
+}
+
+/* .card-button{
+    /* border: 2px solid red;
+} */
+
+.read-more{
+    width: 120px;
+    height: 35px;
+    color: white;
+    background-color: rgb(255, 213, 0);
+    margin:100px 0px 100px 100px;
+    
+}
+/* Mobile Layout */
+@media (max-width:450px){
+   h1{
+    font-size: 70px;
+   }
+    .date{
+    max-width: 100%;
+    margin: 10px;
+   }
+   
+    .show-cards{
+        margin: 10px;
+        display: grid;
+        grid-auto-rows: auto;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-areas:
+        "pic title"
+        "pic button";
+    }
+    .card-pic{
+        grid-area: pic;
+    }
+    .card-title{
+        margin: 10px;
+        grid-area: title;
+    }
+    .read-more{
+        margin: 0px;
+        grid-area: button;
+    }
+    .card-text p{
+        display: none;
+    }
 }
